tests/paczka2/big_fuzzy/88926222.err
Error in line 13: 9weslCK S579 61,4
Error in line 32: S40 A940 44,1
Error in line 25: 9weslCK A940 6,2
Error in line 44: yUNN26PTP A940 64,0
Error in line 11: 0MeCSdG6Y6 S579 164,0
Error in line 30: InXgf S40 224,7
Error in line 50: InXgf S744 98,7
Error in line 57: InXgf S40 91,1
Error in line 63: yUNN26PTP S40 41,9
Error in line 85: gSpgx7n7TG A940 934,2
Error in line 76: S40 S579 5,7
Error in line 87: gSpgx7n7TG S40 16,4
Error in line 104: InXgf A940 80,0
Error in line 92: 0MeCSdG6Y6 S744 67,8
Error in line 118: S40 A940 2,64
Error in line 121: InXgf S744 12,1
Error in line 131: yUNN26PTP S40 38,77
Error in line 126: gSpgx7n7TG S579 35,2
Error in line 139: gSpgx7n7TG S744 16,8
Error in line 133: S40 A940 2,5
Error in line 138: 9Xtg S579 47,0
Error in line 146: S40 S40 84,4
Error in line 136: yUNN26PTP S40 110,7
Error in line 158: 9Xtg S579 66,8
Error in line 172: gSpgx7n7TG S40 24,7
Error in line 161: 9weslCK S40 26,6
Error in line 170: S40 A940 6,2
Error in line 189: 0MeCSdG6Y6 S40 53,8
Error in line 174: InXgf A940 65,9
Error in line 200: InXgf S579 4,1
Error in line 212: gSpgx7n7TG S744 27,1
Error in line 214: gSpgx7n7TG A940 395,9
Error in line 184: 9Xtg S744 48,3
Error in line 220: 9Xtg S579 272,27
Error in line 233: 9weslCK A940 28,0
Error in line 246: 9Xtg S40 48,3
